fixed CSS on 'big image' on mobile project page

--- a/styles/productPage.module.css
+++ b/styles/productPage.module.css
@@ -1,99 +1,102 @@
-.productPageContainer{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.productPageContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.productPageContainer h1{
-    padding: 25px;
-   
+.productPageContainer h1 {
+  padding: 25px;
 }
 
-.productContainer{
-    padding: 25px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.productContainer {
+  padding: 25px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.zoomContainer{
-    width:60%;
-    overflow:hidden;
+.zoomContainer {
+  width: 60%;
+  overflow: hidden;
 }
 
-.bigImage{
-    width: 100%;
-    height: 100%;
-    transition: 1s ease;
+.bigImage {
+  width: 100%;
+  height: 100%;
+  transition: 1s ease;
 }
 
-.bigImage:hover{
-    transform: scale(1.4);
+.bigImage:hover {
+  transform: scale(1.4);
 }
 
-.smallImageContainer{
-    width:40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+.smallImageContainer {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.imageTwo, .imageThree{
-    width: 60%;
-    height: auto;
+.imageTwo,
+.imageThree {
+  width: 60%;
+  height: auto;
 }
 
-.imageTwo:hover, .imageThree:hover{
-    cursor: pointer;
+.imageTwo:hover,
+.imageThree:hover {
+  cursor: pointer;
 }
 
-
-.borderDiv{
-    width:80%;
-    max-width: 1200px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border-bottom: 2px solid black;
+.borderDiv {
+  width: 80%;
+  max-width: 1200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-bottom: 2px solid black;
 }
 
-.cartButton{
-    width: 10%;
-    background-color: white;
-    max-width: 150px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 5%;
-    padding: 10px;
-    font-size: 1rem;
+.cartButton {
+  width: 10%;
+  background-color: white;
+  max-width: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5%;
+  padding: 10px;
+  font-size: 1rem;
 }
 
-
-.cartButton:hover{
-    cursor: pointer;
-    transform: scale(1.1);
-
+.cartButton:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
-.productPageContainer form{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.productPageContainer form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 990px) {
-    .cartButton{
-        width:30%;
-    }
-
-  .imageTwo{
-    width: 100%;
-  }
-  
-  .imageThree{
-    width: 100%;
+  .cartButton {
+    width: 30%;
   }
 
+  .bigImage {
+    object-fit: cover;
+  }
+
+  .imageTwo {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .imageThree {
+    width: 100%;
+    object-fit: cover;
+  }
 }
